tests/declare_class/declare_class.exp
Library type error:
lib/test.js:0
inconsistent use of library definitions
  8:   foo(): string;
              ^^^^^^ string. This type is incompatible with
  2:   foo(): number;
              ^^^^^^ number

declare_class.js:6
  6: C.x = "";
     ^^^ assignment of property `x`
  6: C.x = "";
           ^^ string. This type is incompatible with
  2:     static x: number;
                   ^^^^^^ number

declare_class.js:7
  7: C.foo("");
           ^^ string. This type is incompatible with the expected param type of
  3:     static foo(x: number): void;
                       ^^^^^^ number

declare_class.js:10
 10: (C.name: number); // error, it's a string
      ^^^^^^ string. This type is incompatible with
 10: (C.name: number); // error, it's a string
              ^^^^^^ number


Found 4 errors
